fixed spacing for title

--- a/app/assets/stylesheets/title.scss
+++ b/app/assets/stylesheets/title.scss
@@ -2,14 +2,28 @@
 // styles for title partial
 
 
-.title-spacer {
-  margin-left: auto;
-  margin-right: auto;
+// .title-spacer {
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
+.title-div {
+  display: inline-block;
+  margin-left: 20%;
+  @include breakpoint($sm){
+    margin-left: 20%;
+  }
+  @include breakpoint($md){
+    margin-left: 27%;
+  }
+  @include breakpoint($lg){
+    margin-left: 30%;
+  }
 }
 
 .title-text {
   @extend .primary-header;
-  transition: .2s ease;
+  transition: .5s ease;
 }
 // JS addClass removes borders
 .header-shift {
@@ -23,7 +37,25 @@
   display: inline-block;
   @include breakpoint($xs) { //phone only
     width: 152px;
-    margin-top: -7rem;
+    margin-top: -6.6rem;
+  }
+}
+.left-chevron {
+  margin-left: 6rem;
+  transform: rotate(180deg);
+  margin-right: -.5rem;
+  @include breakpoint($xs) { //phone only
+    margin-right: -1.1rem;
+    margin-top: -6.3rem;
+  }
+}
+//js addClass shifts LEFT-chevron LEFT
+.shift-left { 
+  transition: .5s ease;
+  margin-right: 6rem;
+  margin-left: 0;
+  @include breakpoint($xs){ //phone
+    margin-right: 3rem;
   }
 }
 
@@ -34,30 +66,14 @@
     margin-left: -1.1rem;
   }
 }
-.left-chevron {
-  margin-left: 6rem;
-  transform: rotate(180deg);
-  margin-right: -.5rem;
-  @include breakpoint($xs) { //phone only
-    margin-right: -1.1rem;
-  }
-}
+
 // JS addClass shifts left-chevron right
 .shift-right { 
   transition: .5s ease;
   margin-right: 0;
-  margin-left: 6rem;
-  @include breakpoint($xs){
-    margin-left: 3rem;
-  }
-}
-//js addClass shifts right-chevron left
-.shift-left { 
-  transition: .5s ease;
-  margin-right: 6rem;
-  margin-left: 0;
-  @include breakpoint($xs){
-    margin-right: 3rem;
+  margin-left: -6rem;
+  @include breakpoint($xs){ //phone
+    margin-left: -6rem;
   }
 }
 
@@ -68,7 +84,7 @@
   opacity: 0;
   width: 0;
   overflow: hidden;
-  transition: 1s ease;
+  transition: .5s ease;
    @include breakpoint($xs){
     margin-bottom: -2rem;
   }
